...
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="12dp"
            >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivUserAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar"
...
